--- a/assets/styles/themes/keyCollector/tools/_helpers.scss
+++ b/assets/styles/themes/keyCollector/tools/_helpers.scss
@@ -54,6 +54,16 @@
     //.pxsToRems(padding, (@base--spacingUnit * 12));
 }
 
+.padding--t0 {
+    padding-top: 0rem;
+    //.pxsToRems(padding, (@base--spacingUnit * 12));
+}
+
+.padding--t1 {
+    padding-top: 1rem;
+    //.pxsToRems(padding, (@base--spacingUnit * 12));
+}
+
 
 //-----------------------------------------------------------------------------
 // Apply a margin to element
