--- a/assets/styles/themes/keyCollector/tools/_variables.scss
+++ b/assets/styles/themes/keyCollector/tools/_variables.scss
@@ -47,6 +47,8 @@ $blue-8: #2b5277;
 $blue-9: #3d9be9;
 $blue-10: #0065b1;
 
+$dark-blue: #003e7b;
+
 // Blue green
 $blue-green: #d2ebe6;
 
